<resources>
    <string name="app_name">石油内蒙古运输</string>
    <string name="mine_text">我的</string>
    <string name="safe_text">安全</string>
    <string name="exam_text">考核</string>
    <string name="home_text">首页</string>
    <string name="approval_text">审批</string>

    <string name="my_approval">我的审批</string>
    <string name="under_approval">审批中</string>
    <string name="approval_result">审批结果</string>
    <string name="personal_center_text">个人中心</string>
    <string name="search_contact_text">联系人</string>
    <string name="create_sign_text">生成签名</string>

    <string name="setting">设置</string>
    <string name="str_usercenter_feedback_kf">客服</string>
    <string name="str_usercenter_about_us">关于我们</string>

    <string name="me_left_list_have_not_signed_in">您还没有登录</string>
    <string name="login_username_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_ok_btn">确定</string>
    <string name="login_text">登录</string>

    <string name="user_err_name_is_null">账号不能为空！</string>
    <string name="user_err_checkcode_is_null">手机验证码不能为空！</string>
    <string name="user_err_mail_is_null">手机号/邮箱不能为空！</string>
    <string name="user_err_psw_is_null">密码不能为空！</string>
    <string name="user_err_psw_sure_is_null">确认密码不能为空！</string>
    <string name="username_is_empty">用户名不能为空</string>
    <string name="password_is_empty">密码不能为空</string>

    <string name="login_error_102">请求参数错误</string>
    <string name="login_error_201">帐户不存在</string>
    <string name="login_error_202">密码错误</string>
    <string name="login_error_203">超过绑定限制</string>
    <string name="input_exam_text">觉得不错就说两句</string>
    <string name="send_text">发送</string>
</resources>
