<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@color/light_white"
    tools:ignore="SpUsage" >
    <LinearLayout
        android:id="@+id/safe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/safe_iv"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:background="@mipmap/safe" />
        <TextView
            android:id="@+id/safe_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safe_text"
            android:textSize="@dimen/font_size_13"
            android:textColor="@color/gray_text"
            android:layout_marginTop="@dimen/dp_5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exam_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/exam_iv"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:background="@mipmap/exam" />

        <TextView
            android:id="@+id/exam_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_text"
            android:textSize="@dimen/font_size_13"
            android:textColor="@color/gray_text"
            android:layout_marginTop="@dimen/dp_5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/home_iv"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:background="@mipmap/home_press" />

        <TextView
            android:id="@+id/home_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_text"
            android:textSize="@dimen/font_size_13"
            android:textColor="@color/orange_text"
            android:layout_marginTop="@dimen/dp_5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/approval_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/approval_iv"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:background="@mipmap/approval" />
        <TextView
            android:id="@+id/approval_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approval_text"
            android:textSize="@dimen/font_size_13"
            android:textColor="@color/gray_text"
            android:layout_marginTop="@dimen/dp_5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/mine_iv"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:background="@mipmap/mine" />
        <TextView
            android:id="@+id/mine_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_text"
            android:textSize="@dimen/font_size_13"
            android:textColor="@color/gray_text"
            android:layout_marginTop="@dimen/dp_5" />
    </LinearLayout>
</LinearLayout>